--- a/src/stylesheets/components/main.scss
+++ b/src/stylesheets/components/main.scss
@@ -1,13 +1,12 @@
 .main-container {
-  // height: 100vh;
+  align-items: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  padding: 5rem 0;
+  padding: 5rem 1rem;
 
   &__logo {
-    // margin-top: 1rem;
+    border-radius: 15px;
     width: 50%;
 
     @include tablet {
@@ -25,10 +24,10 @@
 }
 
 .inputs-container {
-  display: flex;
   align-items: center;
-  justify-content: center;
+  display: flex;
   flex-direction: column;
+  justify-content: center;
   margin: 2rem 0;
   width: 100%;
 
@@ -42,36 +41,39 @@
       width: 25%;
     }
 
-    &__input {
-      text-align: center;
-      margin-bottom: .5rem;
-      box-sizing: border-box;
-      border: 2px solid #ccc;
-      border-radius: 4px;
-      font-size: 16px;
-      background-color: white;
-      background-position: 10px 10px;
-      background-repeat: no-repeat;
-      padding: 16px;
-      margin-bottom: 1rem;
+    &__title {
       border-radius: 10px;
+      font-weight: 700;
+      margin-bottom: 1rem;
+      text-transform: uppercase;
+    }
+
+    &__input {
+      background-color: white;
+      border-radius: 10px;
+      border: 2px solid #ccc;
+      box-sizing: border-box;
+      font-size: 16px;
+      margin-bottom: 1rem;
+      padding: 16px 0;
+      text-align: center;
     }
 
     &__button {
       background-color:white;
-      color: black;
-      border: 2px solid #555555;
       border-radius: 10px;
-      padding: 16px 32px;
-      text-align: center;
-      text-decoration: none;
+      border: 2px solid #555555;
+      color: black;
+      cursor: pointer;
       display: inline-block;
       font-size: 16px;
       margin: 4px 2px;
+      padding: 16px 10px;
+      text-align: center;
+      text-decoration: none;
       transition-duration: 0.4s;
-      cursor: pointer;
     }
-    
+
     @include desktop {
       &__button:hover {
         background-color: #555555;
@@ -82,5 +84,19 @@
 
   &__data:nth-child(2n) {
     margin: 2rem 0;
+  }
+}
+
+.whats-title {
+  text-transform: uppercase;
+  font-weight: 600;
+}
+
+.footer-container {
+  margin-top: 2rem;
+
+  &__copyright {
+    display: flex;
+    flex-direction: column;
   }
 }
